; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_osd.c_mpgl_osd_resize.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_osd.c_mpgl_osd_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpgl_osd = type { i32, i32 }
%struct.mp_osd_res = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mpgl_osd_resize(%struct.mpgl_osd* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mp_osd_res, align 4
  %5 = alloca %struct.mpgl_osd*, align 8
  %6 = alloca i32, align 4
  %7 = getelementptr inbounds %struct.mp_osd_res, %struct.mp_osd_res* %4, i32 0, i32 0
  store i32 %1, i32* %7, align 4
  store %struct.mpgl_osd* %0, %struct.mpgl_osd** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.mpgl_osd*, %struct.mpgl_osd** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = getelementptr inbounds %struct.mp_osd_res, %struct.mp_osd_res* %4, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @set_res(%struct.mpgl_osd* %8, i32 %11, i32 %9)
  %13 = load %struct.mpgl_osd*, %struct.mpgl_osd** %5, align 8
  %14 = getelementptr inbounds %struct.mpgl_osd, %struct.mpgl_osd* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.mpgl_osd*, %struct.mpgl_osd** %5, align 8
  %17 = getelementptr inbounds %struct.mpgl_osd, %struct.mpgl_osd* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @osd_resize(i32 %15, i32 %18)
  ret void
}

declare dso_local i32 @set_res(%struct.mpgl_osd*, i32, i32) #1

declare dso_local i32 @osd_resize(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
